# filecrab

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.front  LICENSE  Makefile  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml  pipeline.yml  release-cli.yml  release-web.yml  release.yml
filecrab/: Cargo.toml
filecrab-cli/: Cargo.toml
filecrab-cli/src/: cli.rs  error.rs  main.rs
filecrab-cli/src/cli/: config.rs
filecrab-server/: Cargo.toml
filecrab-server/src/: cli.rs  config.rs  error.rs  main.rs
filecrab-server/src/model/: asset.rs  error.rs  mod.rs  text.rs
filecrab-server/src/web/: error.rs  middleware.rs  routes.rs
filecrab-web/: Cargo.toml  Dioxus.toml  index.html  package-lock.json  tailwind.config.js  tmp.html  tmp.rsx
filecrab-web/assets/: favicon.ico.br  logo.png.br
filecrab-web/nginx/: nginx.conf
filecrab-web/public/: tailwind.css
filecrab-web/src/: main.rs
filecrab/src/: config.rs  error.rs  main.rs
filecrab/src/model/: asset.rs  error.rs  mod.rs  text.rs
filecrab/src/web/: error.rs  middleware.rs  mod.rs  routes.rs
