[workspace]
resolver = "2"

members = ["filecrab", "filecrab-cli"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "3"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.5", features = ["full"] }
tower = { version = "0.4", features = ["filter"] }
tower-cookies = "0.10"

#Tracing
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
tracing = "0.1.40"

anyhow = "1"
