[workspace]
resolver = "2"

members = ["filecrab-server", "filecrab-cli", "filecrab-web"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "3"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.5", features = ["full"] }
tower = { version = "0.5", features = ["filter"] }
tower-cookies = "0.10"
futures = { version = "0.3" }
futures-util = { version = "0.3" }

reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }

clap = { version = "4.4.18", features = ["derive"] }

age = { version = "0.10" }
file-format = "0.25.0"

#Tracing
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
tracing = "0.1.40"

thiserror = "1"
