[package]
name = "filecrab-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
age = { version = "0.10" }
anyhow = { workspace = true }
arboard = { version = "3.3" }
clap = { workspace = true }
futures-util = { workspace = true }
dirs = { version = "5.0" }
indicatif = { version = "0.17" }
reqwest = { version = "0.11", features = ["multipart", "json", "stream"] }
serde = { workspace = true }
tokio = { workspace = true }
toml = { version = "0.8" }

hex = { version = "0.4" }
