[package]
name = "filecrab-cli"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Gouttefangeas"]
license = "MIT"
repository = "https://github.com/NicolasGB/filecrab"
description = "A CLI to share files and text with Filecrab"
readme = "../README.md"

[[bin]]
name = "filecrab"
path = "src/main.rs"

[dependencies]
age = { workspace = true }
anstyle = { version = "1.0" }
arboard = { version = "3.3" }
clap = { workspace = true }
futures-util = { workspace = true }
dirs = { version = "5.0" }
indicatif = { version = "0.17" }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
file-format = { workspace = true }
toml = { version = "0.8" }
inquire = { version = "0.7" }

hex = { version = "0.4" }
