[package]
name = "filecrab-server"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Gouttefangeas"]
license = "MIT"
repository = "https://github.com/NicolasGB/filecrab"
description = "A blazingly fast file and text sharing service"
readme = "../README.md"

[features]
rocksdb = ["surrealdb/kv-rocksdb"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

thiserror = { workspace = true }

surrealdb = { version = "1" }
rust-s3 = { version = "0.34.0-rc3", features = ["with-tokio"] }
chrono = "0.4"

rand = "0.8"
memorable-wordlist = "0.1"

clokwerk = { version = "0.4", features = ["async"] }
