[package]
name = "filecrab-web"
version = "0.1.0"
authors = ["NicolasGB <ngou0210@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6", features = ["web", "router"] }

# Debug
dioxus-logger = "0.6"
anyhow = "1"

reqwest.workspace = true
futures-util.workspace = true
file-format.workspace = true

async-std = { version = "1" }

serde_bytes = { version = "0.11" }
serde_json = { version = "1.0" }

web-sys = { version = "0.3" }

# We add this as we need the js version for wasm, as of now should remain pinned until age updates it to avoid missmatch of versions
getrandom = { version = "0.2", features = ["js"] }
age.workspace = true
