[package]
name = "filecrab"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }

clap = { workspace = true }

age = { version = "0.10" }
rust-s3 = { version = "0.34.0-rc3", features = ["with-tokio"] }
surrealdb = { version = "1" }
rust-argon2 = { version = "2.0" }
rand = "0.8"
chrono = "0.4"
memorable-wordlist = "0.1"
aes-gcm-siv = { version = "0.11" }
hex = { version = "0.4" }
